fix flexbox visibility bug and img file extension

--- a/client/styles.css
+++ b/client/styles.css
@@ -542,6 +542,7 @@ body {
 
 	.invisible {
 		height: 0;
+		visibility: hidden;
 	}
 
 	.invisible img {
